<resources>
    <string name="title_activity_settings">Application settings</string>
    <string name="app_name">Lyrion</string>
    <string name="server_settings">Server Settings</string>
    <string name="discover">Tap here to discover server</string>
    <string name="discover_summary">Attempt to auto-locate media server.</string>
    <string name="misc">Miscellaneous</string>
    <string name="clear_cache">Tap here to clear cache</string>
    <string name="clear_cache_summary">Clear web cache and cause page to be reloaded.</string>
    <string name="cache_to_be_cleared">Cache will be cleared</string>
    <string name="no_servers">No servers found</string>
    <string name="server_changed">Server changed</string>
    <string name="server_discovered">Server discovered</string>
    <string name="no_new_server">No new server found</string>
    <string name="discovering_server">Discovering server</string>
    <string name="ui">Interface</string>
    <string name="fullscreen">Fullscreen</string>
    <string name="fullscreen_summary">Hide status and navigation bars.</string>
    <string name="scale">Scale</string>
    <string name="scale_summary">Set zoom level.\n\nNOTE: You may need to restart the application for zoom changes to be correct.</string>
    <string name="waiting_for_network">Waiting for network</string>
    <string name="server_address">Server IP address or hostname</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="quit">Quit</string>
    <string name="power">Power</string>
    <string name="keep_screen_on">Keep screen on</string>
    <string name="keep_screen_on_summary">Keep screen on whilst in use.</string>
    <string name="oncall">During phone call</string>
    <string name="aftercall">Resume after call</string>
    <string name="aftercall_summary">Restore player state after handling call.</string>
    <string name="orientation">Orientation</string>
    <string name="no_player">No player</string>
    <string name="notifications">Show notification</string>
    <string name="auth_request">Server requires authentication</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="show_over_lock_screen">Show over lock screen</string>
    <string name="show_over_lock_screen_summary">If application is the current application when the screen is locked, it will be shown before the PIN entry screen.</string>
    <string name="advanced">Advanced</string>
    <string name="default_player">Default player</string>
    <string name="default_player_summary">Set name, or ID, of default player.</string>
    <string name="single_player">Only control default</string>
    <string name="single_player_summary">Only show, and control, the default player (as configured above).</string>
    <string name="downloading">Downloading</string>
    <string name="transcode">Transcode to MP3</string>
    <string name="transcode_summary">Convert downloaded files to MP3. Transcoding is performed on the server, which must be properly configured.</string>
    <string name="url_handler_label">Choose player and action</string>
    <string name="player_name">Player</string>
    <string name="play_now">Play now</string>
    <string name="insert">Play next</string>
    <string name="play_next">Add to queue</string>
    <string name="autodiscover">Auto-discover server</string>
    <string name="autodiscover_summary">If connection to server is lost attempt to auto-discover server again.</string>
    <string name="local_player">Local player</string>
    <string name="player_app">Player app</string>
    <string name="auto_start_player">Auto-start player</string>
    <string name="auto_start_player_summary">Automatically start chosen player app when this app starts.</string>
    <string name="stop_app_on_quit">Stop player when quit</string>
    <string name="stop_app_on_quit_summary">Stop chosen player app when quitting.</string>
    <string name="stop_app">Tap here to stop player</string>
    <string name="stop_app_summary">Stop chosen player app.</string>
    <string name="menu_start_player">Add menu entry to start player</string>
    <string name="menu_start_player_summary">Show an entry in the main menu to start chosen player app.</string>
    <string name="stopping_player">Stopping local player</string>
    <string name="failed_start_activity">Failed to start activity</string>
    <string name="no_pdf_handler">No PDF handler found</string>
    <string name="main_notification">Main</string>
    <string name="download_notification">Downloads</string>
    <string name="notification_meta_text">Playback controls</string>
    <string name="quitmenu">Add \'Quit\' menu entry</string>
    <string name="quitmenu_summary">Show a \'Quit\' entry in the main menu.</string>
    <string name="hardware_volume">Change device volume</string>
    <string name="hardware_volume_summary">When changing volume via device\'s volume keys then change the volume of the device, not the software player.</string>
    <string name="player_control_failed">\'%1\' is not installed!</string>
    <string name="failed">Failed!</string>
    <string name="added_to_clipboard">Added to clipboard.</string>
    <string name="share_now_playing">Share Now Playing</string>
    <string name="notif_size">Notification area size</string>
</resources>
