<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/server_settings">
        <Preference
            app:iconSpaceReserved="false"
            app:key="server_address"
            app:summary="@string/no_servers"
            app:title="@string/server_address" />
        <Preference
            app:iconSpaceReserved="false"
            app:key="discover"
            app:summary="@string/discover_summary"
            app:title="@string/discover" />
        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="autodiscover"
            app:summary="@string/autodiscover_summary"
            app:title="@string/autodiscover" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/ui">
        <!--
        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="quitmenu"
            app:summary="@string/quitmenu_summary"
            app:title="@string/quitmenu" />
        -->
        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="fullscreen"
            app:summary="@string/fullscreen_summary"
            app:title="@string/fullscreen" />
        <ListPreference
            android:entries="@array/orientation"
            android:entryValues="@array/orientationAlias"
            android:key="orientation"
            android:title="@string/orientation"
            app:iconSpaceReserved="false" />
        <SeekBarPreference
            android:max="10"
            android:min="0"
            android:progress="5"
            app:iconSpaceReserved="false"
            app:key="zoomscale"
            app:summary="@string/scale_summary"
            app:title="@string/scale" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/misc">
        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="keep_screen_on"
            app:summary="@string/keep_screen_on_summary"
            app:title="@string/keep_screen_on" />
        <ListPreference
            android:entries="@array/oncall"
            android:entryValues="@array/oncallAlias"
            android:key="on_call"
            android:title="@string/oncall"
            app:iconSpaceReserved="false" />
        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="after_call"
            app:summary="@string/aftercall_summary"
            app:title="@string/aftercall" />
        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="show_over_lock_screen"
            app:summary="@string/show_over_lock_screen_summary"
            app:title="@string/show_over_lock_screen" />
        <ListPreference
            android:entries="@array/notifs"
            android:entryValues="@array/notifsAlias"
            android:key="notifs"
            android:title="@string/notifications"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/downloading">
        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="transcode"
            app:summary="@string/transcode_summary"
            app:title="@string/transcode" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/local_player">

        <ListPreference
            android:entries="@array/playerapps"
            android:entryValues="@array/playerappsAlias"
            android:key="player_app"
            android:title="@string/player_app"
            app:iconSpaceReserved="false" />
        <Preference
            app:iconSpaceReserved="false"
            app:key="squeezelite_options"
            app:summary="@string/squeezelite_options_summary"
            app:title="@string/squeezelite_options" />
        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="auto_start_player"
            app:summary="@string/auto_start_player_summary"
            app:title="@string/auto_start_player" />
        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="menu_start_player"
            app:summary="@string/menu_start_player_summary"
            app:title="@string/menu_start_player" />
        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="stop_app_on_quit"
            app:summary="@string/stop_app_on_quit_summary"
            app:title="@string/stop_app_on_quit" />
        <Preference
            app:iconSpaceReserved="false"
            app:key="stop_app"
            app:summary="@string/stop_app_summary"
            app:title="@string/stop_app" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/advanced">
        <Preference
            app:iconSpaceReserved="false"
            app:key="default_player"
            app:summary="@string/default_player_summary"
            app:title="@string/default_player" />
        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="single_player"
            app:summary="@string/single_player_summary"
            app:title="@string/single_player" />
        <Preference
            app:iconSpaceReserved="false"
            app:key="clear_cache"
            app:summary="@string/clear_cache_summary"
            app:title="@string/clear_cache" />
    </PreferenceCategory>
</PreferenceScreen>
