<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" android:padding="10dp">
    <TextView
        android:id="@+id/auth_label"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth_request"
        android:layout_gravity="left"
        android:textSize="20dp"
        android:layout_marginBottom="16dp"/>
    <TextView
        android:id="@+id/username_label"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:layout_gravity="left"/>
    <EditText
        android:id="@+id/username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/password_label"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_gravity="left"/>
    <EditText
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
</LinearLayout>